enhance home page cards

--- a/home.html
+++ b/home.html
@@ -102,9 +102,8 @@
     </div>
 
     <div class="col-md-4">
-      <video width="350" height="250" controls>
+      <video  style="height:30vh; max-width: 100%;" controls>
         <source src="https://youtu.be/_iN4iV0HI2E?si=-TESNYYRXzgEYcpm" type="video/mp4">
-        <source src="https://youtu.be/_iN4iV0HI2E?si=-TESNYYRXzgEYcpm" type="video/ogg">
       </video>
     </div>
   </div>
@@ -116,7 +115,9 @@
                 <img class="card-img-top" src="/img/slider3.jpg" alt="Our Products">
                 <div class="card-body">
                     <h5 class="card-title">Our Products</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text card-content">Beyond our signature curry puff, we have also developed several distinctive sub-brands
+                       to expand our portfolio and offer our loyal customers with more high quality and delicious products. Each brand name 
+                       embodies a unique promise, aspiration and personality.</p>
                     <a href="#" class="btn btn-primary">click</a>
                 </div>
             </div>
@@ -127,8 +128,8 @@
                 <img class="card-img-top" src="/img/Franchise_.jpeg" alt="Franchise">
                 <div class="card-body">
                     <h5 class="card-title">Franchise</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">click</a>
+                    <p class="card-text card-content">Join us on our journey to bring Old Chang Kee across the world.</p>
+                    <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">click</a>
                 </div>
             </div>
         </div>
@@ -138,8 +139,10 @@
                 <img class="card-img-top" src="/img/slider4.jpg" alt="Catering Services">
                 <div class="card-body">
                     <h5 class="card-title">Catering Services</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">click</a>
+                    <p class="card-text card-content">We have specially curated a range of healthier menu packed with wholegrain 
+                      options and prepared with healthier oil. From a nutritious breakfast menu to even specially designed healthy bento sets,
+                      our healthier options are bound to be a sensation on your taste buds!</p>
+                    <a href="https://www.oldchangkeecatering.com/" class="btn btn-primary">click</a>
                 </div>
             </div>
         </div>
@@ -149,7 +152,11 @@
                 <img class="card-img-top" src="/img/investor relation.jpeg" alt="Investor Relations">
                 <div class="card-body">
                     <h5 class="card-title">Investor Relations</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text card-content">The history of Old Chang Kee go as far back as 1956 when it started with just a small stall in a coffee shop
+                       outside the former Rex cinema along McKenzie Road. People just loved the delicious pastry stuffed full of curried potatoes, chicken, a slice
+                        of egg, fried with several herbs and spices. Each curry puff was carefully handmade and properly sealed to lock in the unmistakable aroma that 
+                        won the hearts of many Singaporeans.
+                    </p>
                     <a href="#" class="btn btn-primary">click</a>
                 </div>
             </div>
@@ -160,8 +167,10 @@
                 <img class="card-img-top" src="/img/official mall.jpg" alt="Shopee Official Mall">
                 <div class="card-body">
                     <h5 class="card-title">Shopee Official Mall</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">click</a>
+                    <p class="card-text card-content">Experience risk-free shopping with Shopee Guarantee - get the items you ordered or get your money back! Before buying an item,
+                      be sure to view product ratings and reviews from other users to make informed purchase decisions. Track all your orders from payment to delivery
+                        with Shopee’s up-to-date shipping informatio</p>
+                    <a href="https://shopee.sg" class="btn btn-primary" target="_blank">click</a>
                 </div>
             </div>
         </div>
@@ -171,8 +180,9 @@
                 <img class="card-img-top" src="/img/foodpanda.png" alt="FoodPanda Delivery">
                 <div class="card-body">
                     <h5 class="card-title">FoodPanda Delivery</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">click</a>
+                    <p class="card-text card-content">we list your menu and products online, help you process orders, pick them up,
+                       and deliver them to hungry customers-all in a heartbeat!</p>
+                    <a href="https://www.foodpanda.sg/" class="btn btn-primary" target="_blank">click</a>
                 </div>
             </div>
         </div>
@@ -182,8 +192,10 @@
                 <img class="card-img-top" src="/img/grab.jpeg" alt="GrabFood Delivery">
                 <div class="card-body">
                     <h5 class="card-title">GrabFood Delivery</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">click</a>
+                    <p class="card-text card-content">fastest Food Delivery service in Singapore. curated
+                       all your favorite dishes, restaurants, and cuisines to help you grab your food in the easiest & quickest way possible.
+                    </p>
+                    <a href="https://food.grab.com/sg/en/" class="btn btn-primary" target="_blank">click</a>
                 </div>
             </div>
         </div>
@@ -193,8 +205,9 @@
                 <img class="card-img-top" src="/img/deliveroo.jpg" alt="Deliveroo Delivery">
                 <div class="card-body">
                     <h5 class="card-title">Deliveroo Delivery</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">click</a>
+                    <p class="card-text card-content">Get your favourite food delivered in a flash. You’ll see when your rider’s picked up your order, and be able to follow them along the way.
+                       You’ll get a notification when they’re nearby, too.</p>
+                    <a href="https://deliveroo.com.sg" class="btn btn-primary" target="_blank">click</a>
                 </div>
             </div>
         </div>
@@ -269,7 +282,7 @@
               <a href="#!" class="text-reset">Outlets</a>
             </p>
             <p>
-              <a href="#!" class="text-reset">Franchise</a>
+              <a href="#" class="text-reset"  data-toggle="modal" data-target="#exampleModalLong">Franchise</a>
             </p>
             <p>
               <a href="#!" class="text-reset">Current News and Promotion</a>
@@ -313,6 +326,62 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer -->
+
+  <!-- Button trigger modal -->
+<!-- Modal -->
+ 
+  <div class="modal fade bd-example-modal-lg" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-dark" id="exampleModalLongTitle">Franchise</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body text-dark franchise-dialog">
+          <div class="image">
+            <img src="/img/Franchise_.jpeg" alt="dailog-image" style="max-width: 100%; padding-top: 10px; padding-bottom: 10px;">
+          </div>
+          <h4>Franchise</h4>
+          <p>8 benefits our franchisees will enjoy!</p>
+         
+          <h4>1.Branding</h4>
+          <p>Leverage on Old Chang Kee's brand name and proven formula.</p>
+          <h4>2.Products</h4>
+          <p>You will hold exclusive franchise rights to sell our distinctive and exclusive products, including our signature Curry Puff.</p>
+          <h4>3.Training</h4>
+          <p>Comprehensive training in all essential aspects of business operations will be provided. This includes setting up of outlets, point-of-sales, product knowledge, customer service, staff training, accounting and more.</p>
+          <h4>4.Start-up Support</h4>
+          <p>Our franchise team will offer expert advice and training from site selection, outlet design and construction to official launch of business.</p>
+          <h4>5.On-going Support</h4>
+          <p>Members of our experienced team will visit regularly to review your franchise business, assist in problem-solving, render advice on operations plus provide on-going training.</p>
+          <h4>6.Operations Manuals</h4>
+          <p>Comprehensive manuals incorporating proven operating systems and processes will provide total guidance, from A to Z.</p>
+          <h4>7.Research & Development</h4>
+          <p>Enjoy our delicious products today and tomorrow. Old Chang Kee's R&D programme will continue to create exciting, new hot snacks to our consumers.</p>
+          <h4>8.Marketing Communications</h4>
+          <p>Benefit from our extensive experience covering brand strategy, advertising, promotions, public relations and event management. In addition, we will provide various advertising & promotions materials to support your marketing campaigns.</p>
+  
+          <div>
+            <h5 class="text-danger">Pre-qualifications</h5>
+            <p>We welcome all enquiries. Should you be interested to find out more about the Old Chang Kee Franchise Opportunity, please let us know if you are prepared to meet the following criteria:</p>
+            <ol>
+              <li>Have logistics supply network including cold room, warehousing and delivery services.</li>
+              <li>Share our values for product quality and food hygiene.</li>
+              <li>Possess an entrepreneurial spirit and ideally with a proven track record in business.</li>
+              <li>Preferably have experience in retail, food & beverage or hospitality.</li>
+            </ol>
+            <p>Please note that only shortlisted candidates who meet our prequalification criteria will be notified.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- script -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
